Closed Bug 1232462 Opened 10 years ago Closed 10 years ago

WebGL rope demo doesn't work

Categories

(Core :: Graphics: CanvasWebGL, defect)

45 Branch
x86_64
Linux
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla46
Tracking Status
firefox44 --- unaffected
firefox45 + verified
firefox46 --- verified

People

(Reporter: jimb, Assigned: jrmuizel)

References

()

Details

(Keywords: regression)

Attachments

(2 files)

Attached file Console output
When I visit the given URL, I see a mostly blank light blue page with an FPS meter in the upper left and a bit of text at the top, but no rope. I've attached the output the page writes to the web console.
Works in firefox 43 but not nightly. Also does not work in chromium 47.0.2526.73. My guess would be an ANGLE bug, or as the console output says a bug in the shader which a newer ANGLE version is more strict about.
I can't seem to reproduce this locally.
[Tracking Requested - why for this release]: Web content regression.
Blocks: 1207288
According to bug 1233074 it affects linux and not windows, so believably not OS X either. I can reproduce on ubuntu.
I'm able to reproduce this now. It's caused by a restriction added to glsl 1.3 that disallows sampler arrays indexed with non-constant expressions. I'm not yet sure what the best route to fix this is.
This fixes the situation for now. I'm going to try to work out what should actually be happening here with ANGLE.
Attachment #8699171 - Flags: review?(jgilbert)
Attachment #8699171 - Flags: review?(jgilbert) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla46
Verified as fixed using Nightly 46.0a1 2015-12-18 using the both demos under Ubuntu 14.04 x86. Aurora 45.0a2 2015-12-18 is still affected.
Status: RESOLVED → VERIFIED
Jeff, could you fill the uplift request to aurora/45? Thanks
Flags: needinfo?(jmuizelaar)
Comment on attachment 8699171 [details] [diff] [review] Only ask for a higher version of GLSL when using WebGL2 Approval Request Comment [Feature/regressing bug #]: bug 1207288 [User impact if declined]: Some broken WebGL [Describe test coverage new/current, TreeHerder]: Has been on central a while [Risks and why]: Very low risk. This basically reverts us to our previous behaviour except when using WebGL2
Flags: needinfo?(jmuizelaar)
Attachment #8699171 - Flags: approval-mozilla-aurora?
Assignee: nobody → jmuizelaar
Comment on attachment 8699171 [details] [diff] [review] Only ask for a higher version of GLSL when using WebGL2 Thanks
Attachment #8699171 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Verified as fixed using latest Aurora 45.0a2 2016-01-11 under Ubuntu 15.04 64-bit.
Keywords: regression
Version: unspecified → 45 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: