Bug 1232462. Only ask for a higher version of GLSL when using WebGL2. r=jgilbert

This fixes the situation for now. I'm going to try to work out what should
actually be happening here with ANGLE.

See also: https://bugs.chromium.org/p/angleproject/issues/detail?id=1256