dom/canvas/WebGLShaderValidator.cpp
@@ -128,7 +128,13 @@ WebGLContext::CreateShaderValidator(GLenum shaderType) const
         return nullptr;
 
     ShShaderSpec spec = IsWebGL2() ? SH_WEBGL2_SPEC : SH_WEBGL_SPEC;
-    ShShaderOutput outputLanguage = ShaderOutput(gl);
+    ShShaderOutput outputLanguage = gl->IsGLES() ? SH_ESSL_OUTPUT
+                                                 : SH_GLSL_OUTPUT;
+
+    // If we're using WebGL2 we want a more specific version of GLSL
+    if (IsWebGL2())
+        outputLanguage = ShaderOutput(gl);
+
     ShBuiltInResources resources;
     memset(&resources, 0, sizeof(resources));
     ShInitBuiltInResources(&resources);
